--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "babel-core": "6.3.26",
+    "babel-polyfill": "^6.5.0",
     "babel-preset-es2015": "6.3.13",
     "babel-preset-stage-0": "6.3.13",
     "body-parser": "~1.13.2",
@@ -18,10 +19,14 @@
     "express-session": "^1.12.1",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
+    "mysql": "^2.10.2",
     "node-sass-middleware": "0.8.0",
     "passport": "^0.3.2",
     "sequelize": "^3.19.3",
     "serve-favicon": "~2.3.0",
     "slack-client": "^2.0.2"
+  },
+  "devDependencies": {
+    "sqlite3": "^3.1.1"
   }
 }
