--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "babel-preset-es2015": "6.3.13",
     "babel-preset-stage-0": "6.3.13",
     "body-parser": "~1.13.2",
+    "coffee-middleware": "^0.3.0",
     "connect-redis": "^3.0.1",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
