--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "morgan": "~1.6.1",
     "mysql": "^2.10.2",
     "node-sass-middleware": "0.8.0",
+    "request": "^2.69.0",
     "sequelize": "^3.19.3",
     "serve-favicon": "~2.3.0",
     "slack-client": "^2.0.2"
