--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node bin/www"
+    "start": "node bin/www",
+    "worker": "node bin/worker"
   },
   "dependencies": {
     "babel-core": "6.3.26",
@@ -21,7 +22,9 @@
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
     "mysql": "^2.10.2",
+    "node-resque": "^1.3.2",
     "node-sass-middleware": "0.8.0",
+    "node-schedule": "^1.0.0",
     "request": "^2.69.0",
     "sequelize": "^3.19.3",
     "serve-favicon": "~2.3.0",
