--- a/package.json
+++ b/package.json
@@ -29,5 +29,11 @@
     "sequelize": "^3.19.3",
     "serve-favicon": "~2.3.0",
     "slack-client": "^2.0.2"
+  },
+  "devDependencies": {
+    "shipit-cli": "^1.4.1",
+    "shipit-deploy": "^2.1.3",
+    "shipit-npm": "^0.2.0",
+    "shipit-shared": "^4.4.1"
   }
 }
