--- a/package.json
+++ b/package.json
@@ -3,32 +3,44 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "webpack": "./node_modules/.bin/webpack --color --progress --config config/webpack",
+    "webpack:watch": "./node_modules/.bin/webpack --color --progress --watch --config config/webpack",
     "start": "node bin/www",
     "worker": "node bin/worker"
   },
   "dependencies": {
     "babel-core": "6.3.26",
+    "babel-loader": "^6.2.4",
     "babel-polyfill": "^6.5.0",
     "babel-preset-es2015": "6.3.13",
     "babel-preset-stage-0": "6.3.13",
     "body-parser": "~1.13.2",
-    "coffee-middleware": "^0.3.0",
     "connect-redis": "^3.0.1",
     "cookie-parser": "~1.3.5",
+    "css-loader": "^0.23.1",
     "debug": "~2.2.0",
     "dotenv": "^1.2.0",
     "express": "~4.13.1",
     "express-session": "^1.12.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.8.5",
     "jade": "~1.11.0",
+    "jquery": "^2.2.1",
+    "jquery-modal": "^0.6.1",
     "morgan": "~1.6.1",
     "mysql": "^2.10.2",
     "node-resque": "^1.3.2",
-    "node-sass-middleware": "0.8.0",
+    "node-sass": "^3.4.2",
     "node-schedule": "^1.0.0",
+    "postcss-loader": "^0.8.1",
     "request": "^2.69.0",
+    "sass-loader": "^3.1.2",
     "sequelize": "^3.19.3",
     "serve-favicon": "~2.3.0",
-    "slack-client": "^2.0.2"
+    "slack-client": "^2.0.2",
+    "style-loader": "^0.13.0",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.12.14"
   },
   "devDependencies": {
     "shipit-cli": "^1.4.1",
