--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-loader": "^6.2.4",
     "babel-polyfill": "^6.5.0",
     "babel-preset-es2015": "6.3.13",
+    "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "6.3.13",
     "body-parser": "~1.13.2",
     "connect-redis": "^3.0.1",
@@ -25,20 +26,22 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "jade": "~1.11.0",
-    "jquery": "^2.2.1",
-    "jquery-modal": "^0.6.1",
     "morgan": "~1.6.1",
     "mysql": "^2.10.2",
     "node-resque": "^1.3.2",
     "node-sass": "^3.4.2",
     "node-schedule": "^1.0.0",
     "postcss-loader": "^0.8.1",
+    "react": "^0.14.7",
+    "react-addons-css-transition-group": "^0.14.7",
+    "react-dom": "^0.14.7",
     "request": "^2.69.0",
     "sass-loader": "^3.1.2",
     "sequelize": "^3.19.3",
     "serve-favicon": "~2.3.0",
     "slack-client": "^2.0.2",
     "style-loader": "^0.13.0",
+    "superagent": "^1.7.2",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.14"
   },
