--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "sass-loader": "^3.1.2",
     "sequelize": "^3.19.3",
     "serve-favicon": "~2.3.0",
+    "simple-react-modal": "^0.4.8",
     "slack-client": "^2.0.2",
     "style-loader": "^0.13.0",
     "superagent": "^1.7.2",
