--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "6.3.13",
     "body-parser": "~1.13.2",
+    "boron": "^0.2.3",
     "connect-redis": "^3.0.1",
     "cookie-parser": "~1.3.5",
     "css-loader": "^0.23.1",
@@ -39,7 +40,6 @@
     "sass-loader": "^3.1.2",
     "sequelize": "^3.19.3",
     "serve-favicon": "~2.3.0",
-    "simple-react-modal": "^0.4.8",
     "slack-client": "^2.0.2",
     "style-loader": "^0.13.0",
     "superagent": "^1.7.2",
