--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-preset-stage-0": "6.3.13",
     "body-parser": "~1.13.2",
     "boron": "^0.2.3",
+    "classnames": "^2.2.3",
     "connect-redis": "^3.0.1",
     "cookie-parser": "~1.3.5",
     "css-loader": "^0.23.1",
@@ -34,7 +35,6 @@
     "node-schedule": "^1.0.0",
     "postcss-loader": "^0.8.1",
     "react": "^0.14.7",
-    "react-addons-css-transition-group": "^0.14.7",
     "react-dom": "^0.14.7",
     "request": "^2.69.0",
     "sass-loader": "^3.1.2",
