--- a/package.json
+++ b/package.json
@@ -36,13 +36,15 @@
     "postcss-loader": "^0.8.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
+    "react-redux": "^4.4.0",
+    "redux": "^3.3.1",
+    "redux-thunk": "^2.0.1",
     "request": "^2.69.0",
     "sass-loader": "^3.1.2",
     "sequelize": "^3.19.3",
     "serve-favicon": "~2.3.0",
     "slack-client": "^2.0.2",
     "style-loader": "^0.13.0",
-    "superagent": "^1.7.2",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.14"
   },
