--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "jade": "~1.11.0",
+    "json-loader": "^0.5.4",
     "morgan": "~1.6.1",
     "mysql": "^2.10.2",
     "node-resque": "^1.3.2",
