--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "redux": "^3.3.1",
     "redux-thunk": "^2.0.1",
     "request": "^2.69.0",
+    "reselect": "^2.2.1",
     "sass-loader": "^3.1.2",
     "sequelize": "^3.19.3",
     "serve-favicon": "~2.3.0",
