--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "file-loader": "^0.8.5",
     "jade": "~1.11.0",
     "json-loader": "^0.5.4",
+    "moment-timezone": "^0.5.2",
     "morgan": "~1.6.1",
     "mysql": "^2.10.2",
     "node-resque": "^1.3.2",
