--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-session": "^1.12.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
+    "isomorphic-fetch": "^2.2.1",
     "jade": "~1.11.0",
     "json-loader": "^0.5.4",
     "moment-timezone": "^0.5.2",
