--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "node-resque": "^1.3.2",
     "node-sass": "^3.4.2",
     "node-schedule": "^1.0.0",
+    "parameterize": "0.0.7",
     "postcss-loader": "^0.8.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
