--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jade": "~1.11.0",
     "json-loader": "^0.5.4",
     "lodash": "^4.8.2",
+    "moment": "^2.12.0",
     "moment-timezone": "^0.5.2",
     "morgan": "~1.6.1",
     "mysql": "^2.10.2",
