--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "moment": "^2.12.0",
     "moment-timezone": "^0.5.2",
     "morgan": "~1.6.1",
+    "multer": "^1.1.0",
     "mysql": "^2.10.2",
     "node-resque": "^2.0.0",
     "node-sass": "^3.4.2",
