--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jade": "~1.11.0",
     "json-loader": "^0.5.4",
     "lodash": "^4.8.2",
+    "mime": "^1.3.4",
     "moment": "^2.12.0",
     "moment-timezone": "^0.5.2",
     "morgan": "~1.6.1",
