--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
     "shipit-cli": "^1.4.1",
     "shipit-deploy": "^2.1.3",
     "shipit-npm": "^0.2.0",
-    "shipit-shared": "^4.4.1"
+    "shipit-shared": "^4.4.1",
+    "sprity": "^1.0.8",
+    "sprity-cli": "^1.0.1"
   }
 }
